# alchemy

./: .gitignore  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_02_12_1517-27ac8280ed05_create_table_user.py  2026_02_12_1519-ace49ca73ee0_create_table_tag.py  2026_02_12_1524-78cb9d128eac_create_table_posts.py  2026_02_12_1530-175e5919d58e_create_table_profile.py  2026_02_12_2128-f68fb17b1214_add_cascade_mode_to_tables.py  2026_02_17_1442-224418c1fa23_create_secondary_table.py  2026_02_24_1540-459a6ace2f35_create_new_orm_table.py  2026_02_26_1548-e29f431d4687_add_column_to_table_users.py
app/: 123.sql  main.py
app/auth/: __init__.py  auth_views.py  helpers_jwt.py  jwt.py  schemas.py
app/core/: config.py
app/crud/: __init__.py  post.py  post_tag.py  profile.py  tag.py  user.py
app/database/: __init__.py  db.py
app/models/: __init__.py  post.py  post_tag.py  profile.py  tag.py  user.py
app/schemas/: __init__.py  post.py  post_tag.py  profile.py  tag.py  user.py
app/utils/: __init__.py  security.py
app/views/: __init__.py  post.py  profile.py  tag.py  user.py
