[tool.poetry]
name = "alchemy"
version = "0.1.0"
description = ""
authors = ["Igor Bondarenko <bondarenko200021@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.128.7"}
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
asyncpg = "^0.31.0"
sqlalchemy = "^2.0.46"
alembic = "^1.18.4"
pyjwt = {extras = ["crypto"], version = "^2.11.0"}
bcrypt = "^5.0.0"
python-multipart = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
